# qtProject

./: CMakeLists.txt  food.cpp  food.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  recipe.cpp  recipe.h  recipes.cpp  recipes.h  recipewindow.cpp  recipewindow.h  recipewindow.ui  viewrecipes.cpp  viewrecipes.h  viewrecipes.ui
qtproject/: main.cpp  mainwindow.cpp  mainwindow.h  qtproject_en_IE.ts
